# diswall-rs

./: .gitattributes  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
config/: diswall.toml
data/: create_db.sql
docs/: faq.md  privacy.md  readme.md
scripts/: 10-diswall.conf  diswall-fw-init.service  diswall.service  diswall_init.sh  diswall_init6.sh  iptables-init.sh  nftables.conf  nftables6.conf
src/: config.rs  context.rs  firewall.rs  install.rs  ipset.rs  main.rs  ports.rs  server.rs  state.rs  timer.rs  types.rs  utils.rs
src/addons/: blacklist.txt  mod.rs  nginx.rs  whitelist.txt
src/ui/: help.rs  messages.rs  mod.rs  search.rs  ui_client.rs  ui_server.rs
