[package]
name = "diswall"
version = "0.6.0"
edition = "2021"
homepage = "https://diswall.stream"
repository = "https://github.com/dis-works/diswall-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
toml = "0.8"
json = "0.12.4"
byteorder = "1.5.0"
hostname = "0.4.0"
nats = "0.25.0"
sqlite = "0.36"
time = { version = "0.3.36", features = ["formatting"] }
rand = "0.8.5"
ureq = "^2.10"
lru = "0.12"
nix = { version = "0.29", features = ["fs"] }
ratatui = "0.28.1"
crossterm = "0.28.1"

[target.'cfg(target_os = "linux")'.dependencies]
netstat2 = "0.9.1"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
