[package]
name = "diswall"
version = "0.7.0"
edition = "2021"
homepage = "https://diswall.stream"
repository = "https://github.com/dis-works/diswall-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
toml = "0.8"
json = "0.12.4"
byteorder = "1.5.0"
hostname = "0.4.0"
async-nats = "0.38.0"
sqlite = "0.36"
time = { version = "0.3.37", features = ["formatting"] }
rand = "0.8.5"
ureq = "^2.10"
lazy_static = "1.5.0"
lru = "0.12"
nix = { version = "0.29", features = ["fs"] }
ratatui = "0.29"
crossterm = "0.28.1"
netsock = "0.3.0"
libc = "=0.2.159"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "process", "fs", "io-std", "full"] }
futures = "0.3.31"
reqwest = "0.12.9"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
