[package]
name = "diswall"
version = "0.7.2"
edition = "2021"
homepage = "https://diswall.stream"
repository = "https://github.com/dis-works/diswall-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
toml = "0.8"
json = "0.12.4"
byteorder = "1.5.0"
hostname = "0.4.0"
async-nats = "0.41.0"
sqlite = "0.37.0"
time = { version = "0.3.41", features = ["formatting"] }
rand = "0.9.0"
ureq = "^2.12"
lru = "0.14.0"
nix = { version = "0.29", features = ["fs"] }
ratatui = "0.29"
crossterm = "0.28.1"
netsock = "0.3.0"
libc = "=0.2.159"
tokio = { version = "1.42.1", features = ["rt", "rt-multi-thread", "macros", "process", "fs", "io-std", "full"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["native-tls-vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
